src/objects/Subscription__c.object
<CustomObject>
    <description>Object to identify and tie IE Subscriptions, to their appropriate Unit (Asset), Buyer (Account), and Users (Contacts).</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pass this attribute to IE as part of 1.2 release.  Removes need to change the Subscription End Date from the contract term end date if it&apos;s necessary to remove access to Unit in IE prior to End Date.</description>
        <inlineHelpText>If checked, Subscription has started and is currently in effect.  Uncheck if Subscription should be made inactive for any reason. (e.g. Contract Expired, Non-payment, Legal)</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Intelligent Equipment Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Buyer ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intelligent Equipment Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</description>
        <inlineHelpText>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connectivity_Type__c</fullName>
        <description>Subscription connectivity plan to either use AT&amp;T Cellular option with the SIM card active or customer&apos;s own WiFi/LAN option to send data to the Daikin IE cloud (MS Azure).</description>
        <label>Connectivity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cellular</fullName>
                </value>
                <value>
                    <fullName>WiFi/LAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_Expiration__c</fullName>
        <formula>(DateValue(End_Date__c)- TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GWotGoAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gateway on the Go Asset</description>
        <label>GWotGo Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>GW on the Go Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <description>IE database unique record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>IE database unique record ID.</inlineHelpText>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the record pertains to the IE integration. This is set on import of record from Daikin IE Back Office database.</description>
        <inlineHelpText>Flag to indicate the record pertains to the IE integration. This is set on import of record from Daikin IE Back Office database.</inlineHelpText>
        <label>IE Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <description>Status that gets set when attributes on the record are updated and therefore needs to be sent to the IE system.</description>
        <inlineHelpText>Pending = Record needs to be sent to the IE system. 
Processed = Record was successfully received by IE system. 
Error = Record was not successfully received by IE system.</inlineHelpText>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <description>IE system date for when the record was last updated in the IE database.</description>
        <inlineHelpText>IE system date for when the record was last updated in the IE database.</inlineHelpText>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IEorder_Subscription_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID. Source: IntelligentEquipmentOrders.SubscriptionId</inlineHelpText>
        <label>IEorder Subscription ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Date__c</fullName>
        <description>Previous renewal date for the subscription</description>
        <label>Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Counter__c</fullName>
        <description>Number of times the subscription has been renewed</description>
        <label>Renewal Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date the subscription was renewed</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Current_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to keep track if an email was sent for a subscription renewal where the end date is in the current month.</description>
        <label>Renewal Notice Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Last_Month_Minus_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to keep track if an email was sent for a subscription renewal where the end date is in the last month minus 1.</description>
        <label>Renewal Notice Last Month Minus 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Last_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to keep track if an email was sent for a subscription renewal where the end date is in the last month.</description>
        <label>Renewal Notice Last Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Next_Month_Plus_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to keep track if an email was sent for a subscription renewal where the end date is in the next month plus 1.</description>
        <label>Renewal Notice Next Month Plus 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Notice_Next_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to keep track if an email was sent for a subscription renewal where the end date is in the next month.</description>
        <label>Renewal Notice Next Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Asset__r.SerialNumber</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerInvokedByAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used to determine if the Subscription trigger was invoked by the API and not the Salesforce UI. 
Temporarily gets set to true when a record is inserted via ETL or updated via IE Renewal Web Service and the Subscription triggers are fired. This is used to avoid some code paths in the trigger if the user inserted or updated a record via the Salesforce UI.</description>
        <label>TriggerInvokedByAPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Intelligent Equipment system subscription type.</description>
        <inlineHelpText>Intelligent Equipment system subscription type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CustomRead</fullName>
                </value>
                <value>
                    <fullName>TechReadWrite</fullName>
                </value>
                <value>
                    <fullName>TechRead</fullName>
                </value>
                <value>
                    <fullName>Daikin</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IESubscriptions</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Buyer_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Term_Years__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Active__c</columns>
        <columns>IE_Subscription__c</columns>
        <columns>IE_ID__c</columns>
        <columns>IE_Sync_Status__c</columns>
        <columns>IE_Updated_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IE_Subscription__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Record_Usage__c</field>
            <operation>includes</operation>
            <value>IE</value>
        </filters>
        <label>IE Subscriptions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>